solution-b-s2i-binary/manifests/03-external-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scsp-database-gateway
  namespace: maec-scsp-s2i
spec:
  ports:
    - name: tds
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Endpoints
metadata:
  name: scsp-database-gateway
  namespace: maec-scsp-s2i
subsets:
  - addresses:
      - ip: 10.50.25.105
    ports:
      - name: tds
        port: 1433
