solution-b-s2i-binary/manifests/07-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scsp-frontend
  namespace: maec-scsp-s2i
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: scsp-frontend
